--- a/scss/_femenino.scss
+++ b/scss/_femenino.scss
@@ -11,10 +11,9 @@
     justify-content: center;
 }
 
+/* FEMENINO GRID AREAS*/
 
- /* FEMENINO GRID AREAS*/
-
- .contenedor-femenino{
+.contenedor-femenino{
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto auto auto auto auto;
@@ -126,8 +125,8 @@
     }
 
     .h1-torneo-femenino:hover{
-        background-color: white;
-        color: black;
+        background-color: $colorSecundario;
+        color: $colorPrincipal;
         font-size: 50px;
     }
 }
