--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,117 @@
+/* VISTA CELULAR */ 
+
+body{
+    background-color: $colorPrincipal;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik', sans-serif;
+}
+
+.logo{
+    display: flex;
+    justify-content: center;
+}
+
+.navegacion{
+    display: flex;
+    justify-content: center; 
+}
+
+.menu li{
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    transform: translate(-20px);
+    }
+
+.imagen-portada{
+    width:100%;
+    height:100%;
+}
+
+.imagen-banner{
+    width:100%;
+    height:100%;
+}
+
+.imagen-femenino{
+    width: 100%;
+    height: 100%;
+}
+
+.imagen-masculino{
+    width: 100%;
+    height: 100%;
+}
+
+.h2-informacion{
+    display: flex;
+    justify-content: center;
+}
+
+.h2-femenino{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.h2-masculino{
+    display: flex;
+    justify-content: center;
+}
+
+h1{
+   
+    text-align: center;
+    color: $colorSecundario;
+}
+
+h2{
+    text-align: center;
+    color: $colorSecundario;
+}
+
+p, table {
+    color: $colorSecundario;
+    text-align: center;
+    
+}
+a{
+    text-decoration: none;
+    color: $colorSecundario;
+}
+
+footer{
+    color:$colorSecundario;
+    text-align: center;
+}
+
+.formulario {
+    color: $colorSecundario;
+    display: inline-block;
+    position: relative;
+    margin-left: 500px;
+    }
+
+.button{
+    width: 20px;
+}
+
+input{
+   width: 300px;
+  }
+
+.mensaje{
+    height:100px;
+}
+
+.redes{
+    display: inline;
+    position: relative;
+    width: 25px;
+    height: 25px;
+    margin-top:20px;
+}
 
 /*INDEX GRID AREA*/
 
@@ -139,26 +253,26 @@
     }
 
     .menu li :hover {
-        background-color: white;
-        color: black;
+        background-color: $colorSecundario;
+        color: $colorPrincipal;
     }
 
     .h2-informacion:hover{
         font-size: 50px;
         background-color: #ffd700;
-        color: white;
+        color: $colorSecundario;
     }
     
     .h2-femenino:hover{
         font-size: 50px;
         background-color: rgb(1, 1, 105);
-        color: white;
+        color: $colorSecundario;
     }
 
     .h2-masculino:hover{
         font-size: 50px;
         background-color: rgb(1, 102, 1);
-        color: white;
+        color: $colorSecundario;
     }
 
     .imagen-portada:hover{
