--- a/scss/_femenino.scss
+++ b/scss/_femenino.scss
@@ -82,7 +82,14 @@
         grid-area: redes;
     }
     
+    .contenedor-imagenes-femenino{
+        display: grid;
+        grid-template-columns:auto auto;
+        grid-template-rows: auto auto;
+        grid-gap: 10px;
 }
+
+
 
 /*FEMENINO MEDIA DESKTOP */
 
@@ -129,4 +136,12 @@
         color: $colorPrincipal;
         font-size: 50px;
     }
+
+    .contenedor-imagenes-femenino{
+         display: grid;
+         grid-template-columns:auto auto;
+         grid-template-rows: auto auto;
+         grid-gap: 10px;
+    }
+
 }
