--- a/scss/_masculino.scss
+++ b/scss/_masculino.scss
@@ -1,27 +1,27 @@
-/* CSS PAGINA FEMENINO */
+/* CSS PAGINA MASCULINO */
 
-.portada-femenino {
+.portada-masculino {
     width: 100%;
 }
 
-.contenedor-posiciones-femenino{
+.contenedor-posiciones-masculino{
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
     justify-content: center;
 }
 
-/* FEMENINO GRID AREAS*/
+/* MASCULINO GRID AREAS*/
 
-.contenedor-femenino{
+.contenedor-masculino{
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto auto auto auto auto;
     grid-template-areas:
     "navegacion"
-    "intro-femenino"
-    "portada-femenino"
-    "contenedor-posiciones-femenino"
+    "intro-masculino"
+    "portada-masculino"
+    "contenedor-posiciones-masculino"
     "redes"
     ;
 }
@@ -29,20 +29,20 @@
 .header{
     grid-area: navegacion;
 }
-.main-femenino{
-    grid-area: intro-femenino;
+.main-masculino{
+    grid-area: intro-masculino;
 }
-.main-femenino{
-    grid-area: portada-femenino;
+.main-masculino{
+    grid-area: portada-masculino;
 }
-.main-femenino{
-    grid-area: contenedor-posiciones-femenino;
+.main-masculino{
+    grid-area: contenedor-posiciones-masculino;
 }
 .footer{
     grid-area: redes;
 }
 
-/* FEMENINO MEDIA TABLET */
+/* AMSCULINO MEDIA TABLET */
 
 @media screen and (min-width:768px){
     .contenedor-logo{
@@ -55,13 +55,13 @@
         display: inline-block;
     }
     
-    .contenedor-femenino{
+    .contenedor-masculino{
     grid-template-columns: 100%;
     grid-template-areas: 
     "navegacion"
-    "intro-femenino"
-    "portada-femenino"
-    "contenedor-posiciones-femenino"
+    "intro-masculino"
+    "portada-masculino"
+    "contenedor-posiciones-masculino"
     "redes"
     ;
     }
@@ -69,54 +69,53 @@
     .header{
         grid-area: navegacion;
     }
-    .main-femenino{
-        grid-area: intro-femenino;
+    .main-masculino{
+        grid-area: intro-masculino;
     }
-    .main-femenino{
-        grid-area: portada-femenino;
+    .main-masculino{
+        grid-area: portada-masculino;
     }
-    .main-femenino{
-        grid-area: contenedor-posiciones-femenino; 
+    .main-masculino{
+        grid-area: contenedor-posiciones-masculino; 
     }
     .footer{
         grid-area: redes;
     }
     
-    .contenedor-imagenes-femenino{
+    .contenedor-imagenes-masculino{
         display: grid;
         grid-template-columns:auto auto;
         grid-template-rows: auto auto;
         grid-gap: 10px;
-    }
 }
 
 
 
-/*FEMENINO MEDIA DESKTOP */
+/*MASCULINO MEDIA DESKTOP */
 
 @media screen and (min-width:1024px){
-    .contenedor-femenino{
-        grid-template-columns: 100%;
-        grid-template-areas: 
-        "navegacion"
-        "intro-femenino"
-        "portada-femenino"
-        "contenedor-posiciones-femenino"
-        "redes"
-        ;
+    .contenedor-masculino{
+    grid-template-columns: 100%;
+    grid-template-areas: 
+    "navegacion"
+    "intro-masculino"
+    "portada-masculino"
+    "contenedor-posiciones-masculino"
+    "redes"
+    ;
     }
     
     .header{
         grid-area: navegacion;
     }
-    .main-femenino{
-        grid-area: intro-femenino;
+    .main-masculino{
+        grid-area: intro-masculino;
     }
-    .main-femenino{
-        grid-area: portada-femenino;
+    .main-masculino{
+        grid-area: portada-masculino;
     }
-    .main-femenino{
-        grid-area: contenedor-posiciones-femenino; 
+    .main-masculino{
+        grid-area: contenedor-posiciones-masculino; 
     }
     .footer{
         grid-area: redes;
@@ -132,17 +131,18 @@
         display: inline-block;
     }
 
-    .h1-torneo-femenino:hover{
+    .h1-torneo-masculino:hover{
         background-color: $colorSecundario;
         color: $colorPrincipal;
         font-size: 50px;
     }
 
-    .contenedor-imagenes-femenino{
+    .contenedor-imagenes-masculino{
          display: grid;
          grid-template-columns:auto auto;
          grid-template-rows: auto auto;
          grid-gap: 10px;
     }
 
+}
 }
