--- a/scss/_femenino.scss
+++ b/scss/_femenino.scss
@@ -4,11 +4,35 @@
     width: 100%;
 }
 
+.posiciones-femenino{
+    margin: auto;
+}
+
 .contenedor-posiciones-femenino{
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns:auto;
     grid-template-rows: auto auto;
-    justify-content: center;
+}
+
+.posiciones-femenino{
+    width: 250px;
+    margin: auto;
+    border: solid;
+}
+
+.fixture-femenino{
+display: grid;
+grid-template-columns: auto;
+grid-template-rows: auto;
+justify-content: center;
+font-size: 12px;
+padding-left: auto;
+
+}
+
+.tabla-fixture-femenino{
+width:auto;
+border: solid;
 }
 
 /* FEMENINO GRID AREAS*/
@@ -87,6 +111,31 @@
         grid-template-columns:auto auto;
         grid-template-rows: auto auto;
         grid-gap: 10px;
+    }
+
+    .contenedor-posiciones-femenino{
+        display: grid;
+        grid-template-columns:auto auto;
+        grid-template-rows:auto;
+    }
+    
+    .posiciones-femenino{
+        width: 250px;
+        margin: auto;
+        border: solid;
+    }
+    
+    .fixture-femenino{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    justify-content: center;
+    font-size: 16px;
+    }
+    
+    .tabla-fixture-femenino{
+    width:500px;
+    border: solid;
     }
 }
 
