--- a/scss/_masculino.scss
+++ b/scss/_masculino.scss
@@ -4,11 +4,35 @@
     width: 100%;
 }
 
+.posiciones-masculino{
+    margin: auto;
+}
+
 .contenedor-posiciones-masculino{
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns:auto;
     grid-template-rows: auto auto;
-    justify-content: center;
+}
+
+.posiciones-masculino{
+    width: 250px;
+    margin: auto;
+    border: solid;
+}
+
+.fixture-masculino{
+display: grid;
+grid-template-columns: auto;
+grid-template-rows: auto;
+justify-content: center;
+font-size: 12px;
+padding-left: auto;
+
+}
+
+.tabla-fixture-masculino{
+width:auto;
+border: solid;
 }
 
 /* MASCULINO GRID AREAS*/
@@ -42,7 +66,7 @@
     grid-area: redes;
 }
 
-/* AMSCULINO MEDIA TABLET */
+/* MASCULINO MEDIA TABLET */
 
 @media screen and (min-width:768px){
     .contenedor-logo{
@@ -87,10 +111,36 @@
         grid-template-columns:auto auto;
         grid-template-rows: auto auto;
         grid-gap: 10px;
+
+    }
+
+    .contenedor-posiciones-masculino{
+        display: grid;
+        grid-template-columns:auto auto;
+        grid-template-rows: auto;
+    }
+    
+    .posiciones-femenino{
+        width: 250px;
+        margin: auto;
+        border: solid;
+    }
+    
+    .fixture-masculino{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    justify-content: center;
+    font-size: 16px;
+    }
+    
+    .tabla-fixture-masculino{
+    width:500px;
+    border: solid;
+    }
+   
+
 }
-
-
-
 /*MASCULINO MEDIA DESKTOP */
 
 @media screen and (min-width:1024px){
@@ -144,5 +194,36 @@
          grid-gap: 10px;
     }
 
-}
+    .contenedor-posiciones{
+        display: grid;
+        grid-template-columns:auto auto ;
+        grid-template-rows: auto auto;
+    }
+    
+    .posiciones-masculino{
+        width: 250px;
+        margin: auto;
+        border: solid;
+    }
+    
+    .fixture-masculino{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    justify-content: center;
+    font-size: 16px;
+    }
+    
+    .tabla-fixture-masculino{
+    width:500px;
+    border: solid;
+    }
+   
+    .contendor-p-masculino{
+       display: grid;
+       grid-template-columns: 500px;
+       grid-template-rows: auto;
+       justify-content: center;
+    }
+    
 }
