--- a/scss/_femenino.scss
+++ b/scss/_femenino.scss
@@ -8,12 +8,6 @@
     margin: auto;
 }
 
-.contenedor-posiciones-masculino{
-    display: grid;
-    grid-template-columns:auto;
-    grid-template-rows: auto auto;
-}
-
 .contenedor-posiciones-femenino{
     display: grid;
     grid-template-columns:auto;
@@ -199,5 +193,12 @@ border: solid;
          grid-template-rows: auto auto;
          grid-gap: 10px;
     }
+
+    .contendor-p-femenino{
+        display: grid;
+        grid-template-columns: 500px;
+        grid-template-rows: auto;
+        justify-content: center;
+     }
 
 }
